--- a/style.css
+++ b/style.css
@@ -14,7 +14,16 @@ margin: 0px;
 font-size: 18px;
 }
 canvas{
-    box-shadow: 10px 10px 10px palevioletred;
     border-radius: 10px;
 }
 
+@keyframes example{
+    0%{box-shadow: 1px 1px 30px rgb(255, 23, 101); }
+     20%{ box-shadow: 1px 1px 30px darkorange;}
+     40%{ box-shadow: 1px 1px 30px yellow;}
+     65%{ box-shadow: 1px 1px 30px green;}
+     85%{ box-shadow: 1px 1px 30px cyan;}
+     100%{ box-shadow: 1px 1px 30px purple;}
+     
+ 
+ }
